force-app/main/default/objects/Labour_Time__c/Labour_Time__c.object-meta.xml
<CustomObject>
    <label>Labour Time</label>
    <nameField>
        <label>Labour Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LaboursTime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>