force-app/main/default/objects/Labour_Time__c/fields/Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable__c</fullName>
    <formula>IF(ISPICKVAL(Type_of_Day__c, &quot;Only Morning&quot;),80,
    IF(ISPICKVAL(Type_of_Day__c, &quot;Only Evening&quot;),50,
     IF(ISPICKVAL(Type_of_Day__c, &quot;Half Day&quot;),100,
      IF(ISPICKVAL(Type_of_Day__c, &quot;Full Day&quot;),150,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>