force-app/main/default/objects/Labour_Time__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Account</description>
    <label>Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LaboursTime</relationshipLabel>
    <relationshipName>LaboursTime</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>