force-app/main/default/objects/Labour_Time__c/fields/Type_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Day__c</fullName>
    <label>Type of Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
            <value>
                <fullName>Only Morning</fullName>
            </value>
            <value>
                <fullName>Only Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>