force-app/main/default/objects/Labour_Time__c/fields/Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Work_Day__c</fullName>
    <inlineHelpText>Keeps track of Days labour came to work</inlineHelpText>
    <label>Work Day</label>
    <required>true</required>
    <type>Date</type>
</CustomField>