force-app/main/default/objects/Labour_Time__c/listViews/Labours_Data.listView-meta.xml
<ListView>
    <fullName>Labours_Data</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Type_of_Day__c</columns>
    <columns>Work_Day__c</columns>
    <filterScope>Mine</filterScope>
    <label>Labours Data</label>
</ListView>